# clinguin

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  clinguin_download.lp  clinguin_export.lp  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  start.py
.github/: conda.py  deploy.yml  requirements.txt  trigger.sh
.github/conda/: meta.yaml
.github/workflows/: conda-dev.yml  deploy.yml  doc.yml  pip_installation_check.yml  pipsource.yml  test.yml
angular_frontend/: README.md  angular.json  package.json
angular_frontend/src/: index.html  leader-line.d.ts  styles.scss  styles_none.scss  styles_other.scss  styles_uni.scss
angular_frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  attribute-helper.service.ts  callback-helper.service.ts  child-bearer.service.ts  component-creation.service.ts  component-resolution.service.ts  config.service.ts  context-menu.service.ts  context.service.ts  draw-frontend.service.ts  element-lookup.service.ts  element.component.ts  http.service.ts  locator.service.ts  modal-ref.service.ts  svg-service.service.ts
clinguin/: __init__.py  client_helper.py  parse_input.py  server_helper.py  show_frontend_syntax_enum.py  show_gui_syntax_enum.py  thread_interruption_handler.py
clinguin/client/: __init__.py
clinguin/client/api/: api.py  call_dto.py  frontend_operation_dto.py  frontend_policy_dto.py
clinguin/client/application/: __init__.py  client_base.py
clinguin/client/presentation/: .abstract_gui.py.swp  abstract_frontend.py  abstract_gui.py
clinguin/server/: __init__.py
clinguin/server/application/: abstract_backend.py  attribute.py  callback.py  clinguin_backend.py  element.py  standard_json_encoder.py  standard_solver.py  standard_solver_sus.py
clinguin/server/data/: attribute.py  callback.py  clingraph_model.py  clinguin_context.py  clinguin_model.py  domain_state.py  element.py  ui_state.py  uifb.py
clinguin/server/presentation/: backend_operation_dto.py  backend_policy_dto.py  endpoints.py  endpoints_helper.py  solver_dto.py
clinguin/utils/: __init__.py  annotations.py  case_converter.py  custom_args.py  errors.py  logger.py  singleton_container.py  transformer.py
clinguin/utils/attribute_types/: __init__.py  boolean.py  child_layout.py  color.py  enum.py  flex_direction.py  float.py  font_families.py  font_weight.py  image.py  integer.py  path.py  popup_types.py  string.py  symbol.py  type.py
docs/: README.md  clinguin.tex  conf.py  index.md  index.rst  installation.md  requirements.txt  usage.md
docs/_custom/css/: extra.css  mkdoclingo.css  mkdocstrings.css
docs/_static/css/: custom.css
docs/clinguin/: backends.rst  customize_guide.rst  development.rst  frontends.rst  help.rst  installation.rst  reference.rst  syntax.rst  use.rst  user_guide.rst  web_frontend.rst
docs/clinguin/backends/: ClingconBackend.rst  ClingoBackend.rst  ClingoDLBackend.rst  ClingoMultishotBackend.rst  ClingraphBackend.rst  Custom.rst  ExplanationBackend.rst  FclingoBackend.rst  index.rst
docs/clinguin/development/: angular.rst  api.rst  contributing.rst  customBackend.rst  index.rst  install.rst
docs/community/: DEPLOYMENT.md  DEVELOPMENT.md  help.md  index.md
docs/examples/: index.md
docs/imgs/: 02_prototype_v3.drawio
docs/latex/: Makefile  clinguin.tex
docs/reference/: index.md
docs/source/: conf.py
engine_pt/: README.md  client_helper.py  engine_1.py  engine_2.py  init.py  parse_input.py  server.py  server_helper.py  setup.cfg  start.py  start_application.py  start_client.py  start_server.py
engine_pt/client/: abstract_gui.py  api.py  call_dto.py  client_base.py  tkinter_gui.py
engine_pt/clinguin/: client_helper.py  server_helper.py  server_helper_helper.py  start.py  start_client.py  start_server.py
examples/: README.md  name_replacer.sh
examples/clingraph interactive ASP/: encoding.lp
examples/clingraphInteractive/: options-encoding.lp  program.lp
examples/clingraph_interactive_ASP/: readme.md
examples/elevator/: encoding.lp  my_classes.py  widgets.lp
examples/housing/: encoding.lp  widgets.lp
examples/interact/: idea.lp  idea_alex.lp  instance_gen.lp
examples/sudoku/: brave_cautious_show.lp  widgets.lp  widgets_manual_tag.lp  widgets_not_tagged.lp
examples/temporal/: my_classes.py
examples/test_0/: widgets.lp
examples/test_1/: widgets.lp
examples/test_2/: widgets.lp
examples/test_3/: widgets.lp
examples/test_4/: widgets.lp
examples/test_5/: widgets.lp
old_prototype/: README.md
project-document/: clinguin.tex
project-document/imgs/: 00_initial_drawings.drawio  01_prototype_v2.drawio  clingUIn.drawio
prototype/: brave_cautious.py  clinguin.py  coloring1.lp  syntax_idea.lp
prototype/syntax_discussion/: 20220706_alex_json_format.txt  20220706_alex_syntax.lp  20220707_alex_json_format.txt  20220707_alex_syntax.lp  20220711_alex_json_format.txt  20220711_alex_syntax.lp
src/clinguin/: __init__.py  __main__.py  cli.py
syntax_discussion/: 20220711_widgets_1.lp  20220711_widgets_2.lp  20220712_alex_syntax.lp  20220714_alex_syntax.lp
tests/: test_backend_unit_00_05.py  test_backend_unit_06_11.py  test_backend_unit_06_12.py  test_basic_00_05.py  test_basic_06_11.py  test_basic_06_12.py  test_cli.py  test_client.py  test_clingo_backend.py  test_clingraph.py  test_clinguin_context.py  test_domain_state.py  test_errors.py  test_json_encoder.py  test_main.py  test_parser.py  test_server.py  test_start.py  test_sudoku.py  test_temporal.py  test_text.py  test_ui_state.py  utils_test_utils.py
tests/data/: encoding.lp  ui.lp
tests/reference_json_output/: __init__.py  basic_test_00.py  basic_test_01.py  basic_test_02.py  basic_test_03.py  basic_test_04.py  basic_test_05.py  basic_test_06.py  basic_test_07.py  basic_test_08.py  basic_test_09.py  basic_test_10.py  basic_test_11.py  basic_test_12.py  coloring.py  elevator.py  health.py  sudoku.py
(+660 files in other folders)
