[metadata]
name = clinguin
version = 0.0.1-beta
author = Alexander Beiser, Susana Hahn
author_email = alexl.id.at@gmail.com, hahnmartin@uni-potsdam.de
description = An interactive visualizer for clingo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krr-up/clinguin

[options]
packages = find:
install_requires =
    clingo>=5.6.0
    clorm>=1.4.1
    httpx
    fastapi
    pydantic
    networkx
    uvicorn
    httpcore==0.13.3
    h11==0.12.0
    clingraph
    Pillow
    tk

[options.extras_require]
doc =
    sphinx==6.2.1
    nbsphinx
    sphinx_rtd_theme



[options.entry_points]
console_scripts =
    clinguin = clinguin:main

[pylint.master]
recursive=True

no-space-check=trailing-comma,dict-seperator

method-naming-style=camelCase
function-naming-style=camelCase

argument-naming-style=snake_case
attr-naming-style=snake_case
class-attribute-naming-style=snake_case

class-naming-style=PascalCase

max-line-length=100


indent-string="    "

[pycodestyle]
in-place=true
recursive=true
aggressive=2
max-line-length=100
















