[metadata]
name = clinguin
version = 0.0.2
author = Alexander Beiser, Susana Hahn (Potassco)
author_email = alexl.id.at@gmail.com, hahnmartin@uni-potsdam.de
description = An interactive visualizer for clingo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krr-up/clinguin

[options]
packages = find:
include_package_data=True
install_requires =
    clingo>=5.6.0
    clorm>=1.4.1
    clingo-dl
    fastapi==0.103.*
    networkx
    uvicorn
    clingraph
    Pillow

[options.package_data]
* = clinguin/client/presentation/frontends/angular_frontend/clinguin_angular_frontend/*

[options.extras_require]

tkinter = 
    tk
    
doc =
    sphinx==6.2.1
    nbsphinx
    sphinx_rtd_theme

test = 
    nox
    
format =
    nox
    autoflake
    isort
    black

lint_flake8 =
    nox
    flake8 

lint_pylint = 
    nox
    pylint

[options.entry_points]
console_scripts =
    clinguin = clinguin:main

[pylint.master]
recursive=True

no-space-check=trailing-comma,dict-seperator

method-naming-style=camelCase
function-naming-style=camelCase

argument-naming-style=snake_case
attr-naming-style=snake_case
class-attribute-naming-style=snake_case

class-naming-style=PascalCase

max-line-length=120


indent-string="    "

[pycodestyle]
in-place=true
recursive=true
aggressive=2
max-line-length=120
















