[metadata]
name = clinguin
version = 2.4.1
author = Alexander Beiser, Susana Hahn (Potassco)
author_email = alexl.id.at@gmail.com, hahnmartin@uni-potsdam.de
description = An interactive visualizer for clingo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krr-up/clinguin

[options]
packages = find:
include_package_data=True
install_requires =
    clingo
    clorm>=1.4.1
    clingo-dl
    fastapi
    networkx
    uvicorn
    clingraph
    Pillow
    clingexplaid==1.0.14


[options.package_data]
* = clinguin/client/presentation/frontends/angular_frontend/clinguin_angular_frontend/*

[options.extras_require]

tkinter =
    tk

doc =
    sphinx==6.2.1
    nbsphinx
    furo
    sphinx_inline_tabs
    sphinx_copybutton
    sphinxemoji
    myst_parser

test =
    nox

format =
    nox
    autoflake
    isort
    black

lint_flake8 =
    nox
    flake8

lint_pylint =
    nox
    pylint

[options.entry_points]
console_scripts =
    clinguin = clinguin:main

[pylint.master]
recursive=True

no-space-check=trailing-comma,dict-seperator

method-naming-style=camelCase
function-naming-style=camelCase

argument-naming-style=snake_case
attr-naming-style=snake_case
class-attribute-naming-style=snake_case

class-naming-style=PascalCase

max-line-length=120


indent-string="    "

[pycodestyle]
in-place=true
recursive=true
aggressive=2
max-line-length=120
















